--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,18 @@ server.port=8085
 #DataBase
 spring.datasource.url=jdbc:mysql://localhost:3306/gestionvoyage
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 #JPA
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto= create
+spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
 server.servlet.context-path=/api
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=farouka82@gmail.com
+spring.mail.password=ibeecvuddwigekex
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.batch.jdbc.initialize-schema=always
